# kabukan_v2

./: .env.example  .gitignore  .pre-commit-config.yaml  .samignore  CLAUDE.md  DEPLOYMENT.md  Makefile  README-deployment.md  README.md  dev.bat  env.json  lambda_handler.py  pyproject.toml  pytest.ini  requirements-dev.txt  requirements.txt  setup.bat  setup.cfg  template.yaml
.claude/: settings.local.json
.github/: CODEOWNERS  SECURITY.md  dependabot.yml  pull_request_template.md  settings.yml
.github/ISSUE_TEMPLATE/: bug_report.md  feature_request.md
.github/workflows/: ci.yml  deploy.yml  schedule-test.yml  security.yml  test.yml
docs/: design.md  monitoring-guide.md  requirements.md  tasks.md
events/: daily-event.json  monthly-event.json  weekly-event.json
monitoring/: cloudwatch-alarms.yaml  cloudwatch-dashboard.yaml
scripts/: deploy.ps1  deploy.sh  health-check.sh  local-test.sh  manage-config.sh  monitoring.py  rollback.sh  setup-env.sh
src/: main.py
src/config/: config_manager.py
src/handlers/: lambda_handler.py
src/models/: __init__.py  analysis_models.py  data_models.py
src/monitoring/: __init__.py  alert_manager.py  metrics_publisher.py  operational_monitor.py  performance_monitor.py
src/services/: __init__.py  ai_analysis_error_handler.py  analysis_result_parser.py  cloudwatch_service.py  daily_analysis_service.py  data_validation_service.py  error_handler.py  gemini_service.py  google_sheets_service.py  historical_data_manager.py  monthly_analysis_service.py  parameter_store_service.py  performance_optimizer.py  prompt_generation_service.py  retry_manager.py  retry_policy.py  slack_notification_error_handler.py  slack_notification_formatter.py  slack_priority_notification_manager.py  slack_service.py  stock_data_service.py  technical_analysis_service.py  weekly_analysis_service.py  workflow_orchestrator.py
src/utils/: analysis_validators.py  validators.py
tests/: conftest.py
tests/config/: test_settings.py
tests/fixtures/: test_data.py
tests/integration/: __init__.py  conftest.py  test_aws_services_integration.py  test_end_to_end_workflow.py  test_external_apis_integration.py
tests/mocks/: mock_apis.py
tests/unit/: test_analysis_models.py  test_analysis_validators.py  test_cloudwatch_service.py  test_daily_analysis_service.py  test_daily_analysis_service.py.bak  test_data_models.py  test_data_validation_service.py  test_error_handler.py  test_gemini_service.py  test_google_sheets_service.py  test_historical_data_manager.py  test_parameter_store_service.py  test_performance_optimizer.py  test_retry_manager.py  test_retry_policy.py  test_slack_priority_notification_manager.py  test_stock_data_service.py  test_validators.py  test_workflow_orchestrator.py
